isEmppty removed